# realstate-1

./: .gitignore  AI Real Estate Upgrade & Contractor App.md  HomeReady AI - Master Product Requirements Document.md  HomeReady AI - Product Requirements Document.md  HomeReady AI Product Requirements Document.md  README.md  data.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  run_gemini_assessment.py
backend/app/: main.py
backend/app/api/: endpoints.py  webhooks.py
backend/app/core/: celery_app.py  config.py  rate_limit.py  security.py
backend/app/schemas/: payloads.py
backend/app/services/: cv_service.py  recommendation_service.py  report_service.py  storage.py
backend/migrations/: 001_initial_schema.sql
backend/tests/: test_api.py
frontend/: .gcloudignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/app/analyze/[id]/: page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/contractors/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/reports/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dropdown.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  Table.tsx  Tabs.tsx  Toast.tsx
frontend/src/lib/: authService.ts  utils.ts  validations.ts
