[tool.poetry]
name = "homeready-backend"
version = "0.1.0"
description = "HomeReady AI - Real Estate Whole-House Upgrade Recommendation Engine API & Microservices"
authors = ["HomeReady AI Engineering <engineering@homeready.ai>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.4"
celery = "^5.4.0"
redis = "^5.0.7"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pgvector = "^0.3.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.8.0"
uvicorn = "^0.30.1"
google-cloud-aiplatform = "^1.58.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.10"
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
